feat: use tsdown for bundling

--- a/.npmrc
+++ b/.npmrc
@@ -13,6 +13,9 @@ public-hoist-pattern[]=tailwindcss
 # @repo/tsup-config
 public-hoist-pattern[]=tsup
 
+# @repo/tsdown-config
+public-hoist-pattern[]=tsdown
+
 # @repo/vite-config
 public-hoist-pattern[]=@tailwindcss/vite
 public-hoist-pattern[]=@vitejs/plugin-react
