--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,9 +45,5 @@
     ["cn\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
     ["tv\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
   ],
-  "cSpell.words": [
-    "Fröhlich",
-    "subcomponents",
-    "subline"
-  ]
+  "cSpell.words": ["subline", "tsdown"]
 }
