--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@repo/storybook-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/tsup-config": "workspace:*",
+    "@repo/tsdown-config": "workspace:*",
     "@repo/vite-config": "workspace:*",
     "@types/node": "24.10.1",
     "color2k": "2.0.3",
