ci: add --max-old-space-size=4096 for testsuite run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    # Increase Node.js memory limit to prevent EPIPE crashes during test runs
+    env:
+      NODE_OPTIONS: '--max-old-space-size=4096'
 
     steps:
       - uses: actions/checkout@v6
