feat(veto): use zod v4 + tsdown

--- a/packages/veto/package.json
+++ b/packages/veto/package.json
@@ -44,8 +44,10 @@
     "prepack": "pnpm build",
     "test": "vitest ./src"
   },
-  "dependencies": {
-    "zod": "3.24.3",
-    "zodex": "0.18.2"
+  "peerDependencies": {
+    "zod": ">=4.0.0"
+  },
+  "devDependencies": {
+    "zod": "4.2.0"
   }
 }
