--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -2,7 +2,7 @@
   "name": "@fuf-stack/pixels",
   "description": "fuf core react component library",
   "author": "Fröhlich ∧ Frei",
-  "version": "1.7.0",
+  "version": "2.1.0-next.0",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
