--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fuf-stack/uniform",
-  "version": "1.11.1",
+  "version": "2.1.0-next.0",
   "description": "fuf react form library",
   "author": "Fröhlich ∧ Frei",
   "homepage": "https://github.com/fuf-stack/pixels#readme",
