--- a/release-please-config-next.json
+++ b/release-please-config-next.json
@@ -13,6 +13,6 @@
     "packages/uniform": {},
     "packages/veto": {}
   },
-  "plugins": ["node-workspace"],
+  "plugins": [],
   "last-release-sha": "b888a9c8e27564e38a6b894c411388dd33883927"
 }
