--- a/packages/pixel-motion/package.json
+++ b/packages/pixel-motion/package.json
@@ -2,7 +2,7 @@
   "name": "@fuf-stack/pixel-motion",
   "description": "fuf pixel motion with framer motion",
   "author": "Fröhlich ∧ Frei",
-  "version": "1.1.0",
+  "version": "2.1.0-next0",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
