chore: update package json versions

--- a/packages/veto/package.json
+++ b/packages/veto/package.json
@@ -2,7 +2,7 @@
   "name": "@fuf-stack/veto",
   "description": "fuf schema validation library",
   "author": "Fröhlich ∧ Frei",
-  "version": "0.13.1",
+  "version": "1.0.0-next0",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
