ci: try versioning

--- a/release-please-config-next.json
+++ b/release-please-config-next.json
@@ -4,7 +4,7 @@
   "include-component-in-tag": true,
   "prerelease": true,
   "prerelease-type": "next",
-  "versioning-strategy": "prerelease",
+  "versioning": "prerelease",
   "packages": {
     "packages/megapixels": {},
     "packages/pixel-motion": {},
