--- a/packages/pixel-utils/package.json
+++ b/packages/pixel-utils/package.json
@@ -2,7 +2,7 @@
   "name": "@fuf-stack/pixel-utils",
   "description": "fuf pixels helper utils",
   "author": "Fröhlich ∧ Frei",
-  "version": "1.1.0",
+  "version": "1.1.0-next.1",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
