ci: rate limit framer-motion updates

--- a/renovate.json5
+++ b/renovate.json5
@@ -42,10 +42,10 @@
       groupName: '@heroui monorepo',
     },
 
-    // framer-motion not patch releases (rate-limiting)
+    // framer-motion: weekly only (rate-limiting)
     {
       matchPackageNames: ['framer-motion'],
-      excludeUpdateTypes: ['patch'],
+      schedule: ['before 9am on monday'],
     },
 
     // lock zod at version v3.24.3 to avoid type infer issues
