--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -210,7 +210,8 @@
     "@heroui/tooltip": "2.2.21",
     "framer-motion": "12.29.0",
     "next-themes": "0.4.6",
-    "react-icons": "5.5.0"
+    "react-icons": "5.5.0",
+    "sonner": "2.0.7"
   },
   "devDependencies": {
     "@types/debug": "4.1.12",
