feat(pixels): replace color prop with unified variant prop
  - merge the separate color and variant props on Alert into a single  variant
  - remove the showIcon prop in favor of implicit behavior
  - extend Toast with icon option

--- a/packages/megapixels/package.json
+++ b/packages/megapixels/package.json
@@ -12,12 +12,12 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./Filter": {
-      "require": "./dist/Filter/index.cjs",
-      "import": "./dist/Filter/index.js"
+      "import": "./dist/Filter/index.js",
+      "require": "./dist/Filter/index.cjs"
     },
     "./package.json": "./package.json"
   },
