--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -12,116 +12,116 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./Checkboxes": {
-      "require": "./dist/Checkboxes/index.cjs",
-      "import": "./dist/Checkboxes/index.js"
+      "import": "./dist/Checkboxes/index.js",
+      "require": "./dist/Checkboxes/index.cjs"
     },
     "./FieldArray": {
-      "require": "./dist/FieldArray/index.cjs",
-      "import": "./dist/FieldArray/index.js"
+      "import": "./dist/FieldArray/index.js",
+      "require": "./dist/FieldArray/index.cjs"
     },
     "./FieldCard": {
-      "require": "./dist/FieldCard/index.cjs",
-      "import": "./dist/FieldCard/index.js"
+      "import": "./dist/FieldCard/index.js",
+      "require": "./dist/FieldCard/index.cjs"
     },
     "./Form": {
-      "require": "./dist/Form/index.cjs",
-      "import": "./dist/Form/index.js"
+      "import": "./dist/Form/index.js",
+      "require": "./dist/Form/index.cjs"
     },
     "./Grid": {
-      "require": "./dist/Grid/index.cjs",
-      "import": "./dist/Grid/index.js"
+      "import": "./dist/Grid/index.js",
+      "require": "./dist/Grid/index.cjs"
     },
     "./helpers": {
-      "require": "./dist/helpers/index.cjs",
-      "import": "./dist/helpers/index.js"
+      "import": "./dist/helpers/index.js",
+      "require": "./dist/helpers/index.cjs"
     },
     "./hooks/useClientValidation": {
-      "require": "./dist/hooks/useClientValidation/index.cjs",
-      "import": "./dist/hooks/useClientValidation/index.js"
+      "import": "./dist/hooks/useClientValidation/index.js",
+      "require": "./dist/hooks/useClientValidation/index.cjs"
     },
     "./hooks/useController": {
-      "require": "./dist/hooks/useController/index.cjs",
-      "import": "./dist/hooks/useController/index.js"
+      "import": "./dist/hooks/useController/index.js",
+      "require": "./dist/hooks/useController/index.cjs"
     },
     "./hooks/useFormContext": {
-      "require": "./dist/hooks/useFormContext/index.cjs",
-      "import": "./dist/hooks/useFormContext/index.js"
+      "import": "./dist/hooks/useFormContext/index.js",
+      "require": "./dist/hooks/useFormContext/index.cjs"
     },
     "./hooks/useInput": {
-      "require": "./dist/hooks/useInput/index.cjs",
-      "import": "./dist/hooks/useInput/index.js"
+      "import": "./dist/hooks/useInput/index.js",
+      "require": "./dist/hooks/useInput/index.cjs"
     },
     "./hooks/useInputValueDebounce": {
-      "require": "./dist/hooks/useInputValueDebounce/index.cjs",
-      "import": "./dist/hooks/useInputValueDebounce/index.js"
+      "import": "./dist/hooks/useInputValueDebounce/index.js",
+      "require": "./dist/hooks/useInputValueDebounce/index.cjs"
     },
     "./hooks/useInputValueTransform": {
-      "require": "./dist/hooks/useInputValueTransform/index.cjs",
-      "import": "./dist/hooks/useInputValueTransform/index.js"
+      "import": "./dist/hooks/useInputValueTransform/index.js",
+      "require": "./dist/hooks/useInputValueTransform/index.cjs"
     },
     "./hooks/useUniformField": {
-      "require": "./dist/hooks/useUniformField/index.cjs",
-      "import": "./dist/hooks/useUniformField/index.js"
+      "import": "./dist/hooks/useUniformField/index.js",
+      "require": "./dist/hooks/useUniformField/index.cjs"
     },
     "./hooks/useUniformFieldArray": {
-      "require": "./dist/hooks/useUniformFieldArray/index.cjs",
-      "import": "./dist/hooks/useUniformFieldArray/index.js"
+      "import": "./dist/hooks/useUniformFieldArray/index.js",
+      "require": "./dist/hooks/useUniformFieldArray/index.cjs"
     },
     "./hooks/useWatchUserChange": {
-      "require": "./dist/hooks/useWatchUserChange/index.cjs",
-      "import": "./dist/hooks/useWatchUserChange/index.js"
+      "import": "./dist/hooks/useWatchUserChange/index.js",
+      "require": "./dist/hooks/useWatchUserChange/index.cjs"
     },
     "./Input": {
-      "require": "./dist/Input/index.cjs",
-      "import": "./dist/Input/index.js"
+      "import": "./dist/Input/index.js",
+      "require": "./dist/Input/index.cjs"
     },
     "./partials/FieldCopyTestIdButton": {
-      "require": "./dist/partials/FieldCopyTestIdButton/index.cjs",
-      "import": "./dist/partials/FieldCopyTestIdButton/index.js"
+      "import": "./dist/partials/FieldCopyTestIdButton/index.js",
+      "require": "./dist/partials/FieldCopyTestIdButton/index.cjs"
     },
     "./partials/FieldValidationError": {
-      "require": "./dist/partials/FieldValidationError/index.cjs",
-      "import": "./dist/partials/FieldValidationError/index.js"
+      "import": "./dist/partials/FieldValidationError/index.js",
+      "require": "./dist/partials/FieldValidationError/index.cjs"
     },
     "./RadioBoxes": {
-      "require": "./dist/RadioBoxes/index.cjs",
-      "import": "./dist/RadioBoxes/index.js"
+      "import": "./dist/RadioBoxes/index.js",
+      "require": "./dist/RadioBoxes/index.cjs"
     },
     "./Radios": {
-      "require": "./dist/Radios/index.cjs",
-      "import": "./dist/Radios/index.js"
+      "import": "./dist/Radios/index.js",
+      "require": "./dist/Radios/index.cjs"
     },
     "./RadioTabs": {
-      "require": "./dist/RadioTabs/index.cjs",
-      "import": "./dist/RadioTabs/index.js"
+      "import": "./dist/RadioTabs/index.js",
+      "require": "./dist/RadioTabs/index.cjs"
     },
     "./Select": {
-      "require": "./dist/Select/index.cjs",
-      "import": "./dist/Select/index.js"
+      "import": "./dist/Select/index.js",
+      "require": "./dist/Select/index.cjs"
     },
     "./Slider": {
-      "require": "./dist/Slider/index.cjs",
-      "import": "./dist/Slider/index.js"
+      "import": "./dist/Slider/index.js",
+      "require": "./dist/Slider/index.cjs"
     },
     "./SubmitButton": {
-      "require": "./dist/SubmitButton/index.cjs",
-      "import": "./dist/SubmitButton/index.js"
+      "import": "./dist/SubmitButton/index.js",
+      "require": "./dist/SubmitButton/index.cjs"
     },
     "./Switch": {
-      "require": "./dist/Switch/index.cjs",
-      "import": "./dist/Switch/index.js"
+      "import": "./dist/Switch/index.js",
+      "require": "./dist/Switch/index.cjs"
     },
     "./SwitchBox": {
-      "require": "./dist/SwitchBox/index.cjs",
-      "import": "./dist/SwitchBox/index.js"
+      "import": "./dist/SwitchBox/index.js",
+      "require": "./dist/SwitchBox/index.cjs"
     },
     "./TextArea": {
-      "require": "./dist/TextArea/index.cjs",
-      "import": "./dist/TextArea/index.js"
+      "import": "./dist/TextArea/index.js",
+      "require": "./dist/TextArea/index.cjs"
     },
     "./package.json": "./package.json"
   },
